# marketplace-ad-service-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.app.yml  docker-compose.yml  pyproject.toml  seed.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_create_ads_table.py  0002_create_outbox_table.py
src/: fastapi.py  settings.py
src/application/: exceptions.py
src/application/ports/: message_broker.py  outbox.py  repositories.py  uow.py  usecases.py  user_profile.py
src/application/services/: outbox_relay.py
src/application/usecases/: create_ad.py  delete_ad.py  get_ad.py  get_ad_internal.py  list_ads.py  update_ad.py
src/domain/: entities.py  exceptions.py
src/infrastructure/http/: auth_client.py
src/infrastructure/messaging/: kafka_broker.py
src/infrastructure/persistence/: database.py  models.py  outbox_repository.py  repositories.py  uow.py
src/presentation/api/: dependencies.py  schemas.py
src/presentation/api/routes/: internal.py  public.py
tests/: conftest.py
tests/domain/: test_ad.py
tests/presentation/: conftest.py  test_internal.py  test_public.py
tests/services/: test_outbox_relay.py
tests/usecases/: test_create_ad.py  test_delete_ad.py  test_get_ad.py  test_get_ad_internal.py  test_list_ads.py  test_update_ad.py
